# haskell-ex

./: .gitignore  HINTS.md  README.md
average/444c43/: Main.hs
average/jasonkuhrt/: Main.hs
average/thalesmg/: Main.hs
average/vitcra/: Main.hs
bigint/balac/: BigInt.hs  BigIntSpec.hs  solve.hs
bigint/neongreen/src/: BigInt.hs
binary/444c43/: Main.hs
binary/alviprofluvium/: Main.hs
binary/balac/: solve.hs
binary/jasonkuhrt/: Main.hs  stack.yaml
binary/neongreen/: Main.hs
binary/thalesmg/: Main.hs
binary/vitcra/: Main.hs
compress/alviprofluvium/: Main.hs
compress/balac/: solve.hs
compress/jasonkuhrt/: Main.hs  compress.cabal
compress/jasonkuhrt/source/: Compress.hs
compress/jasonkuhrt/test/: Main.hs
compress/neongreen/: Main.hs
compress/vitcra/: Main.hs
expr/alviprofluvium/: Expr.hs
expr/balac/: solve.hs
expr/jasonkuhrt/: Main.hs
expr/neongreen/: Main.hs
expr/thalesmg/: Main.hs
expr/vitcra/: Main.hs
jpath/balac/: solve.hs
jpath/neongreen/: jp.hs
logic-brute/balac/: solve.hs
logic-brute/neongreen/: Main.hs
logic-brute/vitcra/: Main.hs
mergesort/444c43/: Main.hs
mergesort/alviprofluvium/: .Main.hs.swp  Main.hs
mergesort/balac/: solve.hs
mergesort/callmecabman/: Main.hs
mergesort/jasonkuhrt/: Main.hs
mergesort/neongreen/: Merge.hs
mergesort/thalesmg/: Main.hs
mergesort/vitcra/: Main.hs
q1/balac/: solve.hs
reposts/balac/: solve.hs
reposts/callmecabman/: Main.hs
reposts/jasonkuhrt/: Main.hs  reposts.cabal
reposts/neongreen/: Main.hs
reposts/vitcra/: Main.hs
scary/alviprofluvium/: Main.hs
scary/avatar29A/: Main.hs
scary/balac/: solve.hs
scary/callmecabman/: Main.hs
scary/jasonkuhrt/: Main.hs
scary/jonaprieto/: Main.hs  Scary.hs
scary/knikel/: Scary.hs  ScaryTests.hs
scary/neongreen/: Main.hs
scary/sth-fish/: Main.hs
scary/thalesmg/: Main.hs
shuffle/balac/: solve.hs
table/alviprofluvium/: Main.hs
table/neongreen/: Main.hs
table/vitcra/: Main.hs
tictactoe/avatar29A/tictac/: tictac.cabal
tictactoe/avatar29A/tictac/app/: Main.hs
tictactoe/avatar29A/tictac/src/: Draw.hs  Game.hs
tictactoe/balac/: solve.hs
tictactoe/callmecabman/: Main.hs
tictactoe/neongreen/: Main.hs
tictactoe/vitcra/: Main.hs
week1/: README.md
week1/logic-brute/alviprofluvium/: Main.hs
week1/logic-brute/balac/: solve.hs
week1/logic-brute/borboss366/: Main.hs
week1/logic-brute/neongreen/: minified.hs
week1/reposts/alviprofluvium/: Main.hs
week1/reposts/balac/: solve.hs
week1/reposts/boccato/: Main.hs
week1/reposts/borboss366/: Main.hs
week1/reposts/kirikaza/: Reposts.hs  reposts.cabal  try.sh
week1/reposts/maverickchaser/: Main.hs
week1/reposts/thalesmg/: Main.hs
week1/scary/444c43/: Main.hs
week1/scary/balac/: solve.hs
week1/scary/boccato/: Main.hs
week1/scary/borboss366/: Main.hs
week1/scary/kirikaza/: .gitignore  Scary.hs  scary.cabal  try.sh
week1/scary/knikel/: Scary.hs
week1/scary/lukvol/: Main.hs
week1/scary/maverickchaser/: Main.hs
week1/scary/stites/: .ghci  Main.hs  Makefile
week1/scary/vitcra/: Main.hs
week1/tictactoe/balac/: solve.hs
week1/tictactoe/borboss366/: Main.hs
week1/tictactoe/maverickchaser/: Main.hs
week1/tictactoe/neongreen/: Main.hs
week1/tictactoe/thalesmg/: Main.hs
week2/: README.md
week2/bigint/balac/: BigInt.hs  BigIntSpec.hs
week2/bigint/neongreen/: bigint.cabal
week2/bigint/neongreen/test/: BigIntSpec.hs
week2/compress/balac/: solve.hs
week2/compress/thalesmg/: Main.hs
week2/compress/vitcra/: Main.hs
week2/jpath/balac/: solve.hs
week2/mergesort/alviprofluvium/: Main.hs
week2/mergesort/balac/: solve.hs
week2/mergesort/jasonkuhrt/: Main.hs
week2/mergesort/maverickchaser/: Main.hs
week2/mergesort/neongreen/: Merge.hs
week2/shuffle/balac/: solve.hs
week2/shuffle/neongreen/: Main.hs
week3/: README.md
week3/average/alviprofluvium/: Main.hs
week3/average/aneksteind/: average.hs
week3/average/balac/: solve.hs
week3/average/kirikaza/: Average.hs  average.cabal  try.sh
week3/average/maverickchaser/: Main.hs
week3/average/vitcra/: Main.hs
week3/binary/444c43/: Main.hs
week3/binary/aneksteind/: binary.hs
week3/binary/balac/: solve.hs
week3/binary/boccato/: Main.hs
week3/binary/jasonkuhrt/: BinaryConversion.cabal  Main.hs
week3/binary/maverickchaser/: Main.hs
week3/expr/alviprofluvium/: Expr.hs
week3/expr/aneksteind/: expr.hs
week3/expr/balac/: solve.hs
week3/expr/maverickchaser/: Main.hs
week3/expr/neongreen/: Main.hs
week3/expr/thalesmg/: Main.hs
week3/table/alviprofluvium/: Main.hs
week3/table/neongreen/: Main.hs
week3/table/thalesmg/: Main.hs
week3/table/vitcra/: Main.hs
week3/xor/balac/: Main.hs
week3/xor/jasonkuhrt/: Main.hs  xor.cabal
week4/: README.md
week4/json-print/jasonkuhrt/: Main.hs
week4/json-print/neongreen/: Main.hs
week4/json-print/thalesmg/: Main.hs
week4/justify/int-index/: Main.hs
week4/justify/jasonkuhrt/: Main.hs
week4/justify/vitcra/: Main.hs
week4/path/neongreen/: Main.hs
week4/path/thalesmg/: Main.hs  sample1  sample2
week4/path/vitcra/: Main.hs
week4/spiral/: spiral.hs
week4/spiral/aneksteind/: spiral.hs
week4/spiral/balac/: Main.hs
week4/spiral/jasonkuhrt/: Main.hs  spiral.cabal
week4/spiral/neongreen/: Main.hs
week4/spiral/vitcra/: Main.hs
week4/trie/alviprofluvium/: Main.hs
week4/trie/jasonkuhrt/: Main.hs
week4/trie/stites/: Main.hs
week4/trie/thalesmg/: Main.hs
week5/: README.md
week5/db/jasonkuhrt/: db.cabal
week5/db/jasonkuhrt/source/: DB.hs
week5/db/neongreen/: Main.hs
week5/db/thalesmg/: Main.hs
week5/quine/: Main.hs
week5/quine/jasonkuhrt/: Main.hs
week5/quine/thalesmg/: Main.hs
week5/quine/vitcra/: Main.hs
week6/: README.md
week6/quickcheck/jasonkuhrt/: Main.hs  quickcheck.cabal  stack.yaml
week6/quickcheck/neongreen/: Main.hs
week6/serialize/jasonkuhrt/: Main.hs  (+1 more)
wilson/balac/: solve.hs
wilson/jonaprieto/: Wilson.hs
wilson/neongreen/: Main.hs
wilson/vitcra/: Main.hs
xor/alviprofluvium/: Main.hs
xor/thalesmg/: Main.hs
xor/vitcra/: Main.hs
(+4 files in other folders)
