name:                compress
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      source
  exposed-modules:     Compress
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite compress-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , compress
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jasonkuhrt/compress
