name:                tictac
version:             0.1.0.0
synopsis:            A learning project
description:         Please see README.md
homepage:            https://github.com/avatar29A/tictac#readme
license:             MIT
license-file:        LICENSE
author:              Glebov Boris
maintainer:          avatar29A@gmail.com
copyright:           2016 Glebov Boris
category:            Console
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Draw
  build-depends:       base >= 4.7 && < 5
                       , ansi-terminal
  default-language:    Haskell2010

executable tictac-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tictac
  default-language:    Haskell2010

test-suite tictac-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tictac
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/avatar29A/tictac
