name:                reposts
version:             0.1.0.0
synopsis:            Haskell exercises: Week 1: Task 1: Calculate probability of winning using simulation (by kirikaza)
homepage:            https://github.com/neongreen/haskell-ex
author:              Kirill Kazakov
maintainer:          k@kirikaza.ru
build-type:          Simple
cabal-version:       >=1.10

executable reposts
  hs-source-dirs:      .
  main-is:             Reposts.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , random-fu