name:                average
version:             0.1.0.0
synopsis:            Haskell exercises: Week 3: Task 13: Compute a moving average (by kirikaza)
homepage:            https://github.com/neongreen/haskell-ex
author:              Kirill Kazakov
maintainer:          k@kirikaza.ru
build-type:          Simple
cabal-version:       >=1.10

executable average
  hs-source-dirs:      .
  main-is:             Average.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers