name:                xor
category:            App
version:             0.0.0.1
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xor
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jasonkuhrt/xor
