name:                spiral
version:             0.1.0.0
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Main
  build-depends:       base >= 4.7 && < 5, matrix
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jasonkuhrt/spiral
