name:                db
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/jasonkuhrt/foo#readme
license:             BSD3
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
copyright:           ISC
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      source
  exposed-modules:     DB
  build-depends:       base, text, containers, scientific
  default-language:    Haskell2010
  -- ghc-options:         -Wall

test-suite foo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , db
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
