name:                quickcheck
version:             0.1.0.0
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Main
  build-depends:       base >= 4.7 && < 5, random
  default-language:    Haskell2010
